[package]
name = "llmrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llm = { git = "https://github.com/rustformers/llm" , branch = "main" }
bytemuck = "1.13.1"
bytesize = "1.1"
env_logger = "0.10.0"
log = "0.4"
rand = "0.8.5"
thiserror = "1.0"
anyhow = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
spinoff = { version = "0.7.0", default-features = false, features = ["dots2"] }
clap = { version = "4.1.8", features = ["derive"] }